--- a/index.html
+++ b/index.html
@@ -9,13 +9,27 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<div id="homepage"></div>
-	<div id="menu">
-		<img src="img/logoRe.png">
-		<h2>STORY</h2>
-		<h2>HISTORY</h2>
-		<h2>MEDIA</h2>
-		<h2>ARTIST</h2>
+	<div id="homepage">
+		<div id="menu">
+			<img src="img/logoRe.png" x="0" y="0">
+			<ul>
+				<li>STORY</li>
+				<li>HISTORY</li>
+				<li>MEDIA</li>
+				<li>ARTIST</li>
+			</ul>
+		</div>
+
+		<!-- <div id="content" x="2" y="0">
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		</div> -->
+
 	</div>
+
 </body>
 </html>
