--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 		<div id="menu">
 			<img src="img/logoRe.png" x="0" y="0">
 			<ul>
-				<li>STORY</li>
-				<li>HISTORY</li>
-				<li>MEDIA</li>
-				<li>ARTIST</li>
+				<li id="m_story">STORY</li>
+				<li id="m_history">HISTORY</li>
+				<li id="m_media">MEDIA</li>
+				<li id="m_artist">ARTIST</li>
 			</ul>
 		</div>
 
