--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<div id="homepage">
+	<div id="homepage" class="home">
 		<div id="menu">
-			<img src="img/logoRe.png" x="0" y="0">
+			<img src="img/logoRe.png" x="0" y="0" onclick="toHomepage()">
 			<ul>
 				<li id="m_story">STORY</li>
 				<li id="m_history">HISTORY</li>
@@ -20,16 +20,20 @@
 			</ul>
 		</div>
 
-		<!-- <div id="content" x="2" y="0">
+		<div id="content" x="2">
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		</div> -->
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<br><br>
+
+			<button id="readMore">read more</button>
+		</div>
 
 	</div>
+
+	<script type="text/javascript" src="web.js"></script>
 
 </body>
 </html>
