--- a/artist.html
+++ b/artist.html
@@ -2,8 +2,46 @@
 <html>
 <head>
 	<title>Artist</title>
+	<meta charset=utf-8>
+	<meta name=description content="">
+	<meta name=viewport content="width=device-width, initial-scale=1">
+
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+	<div class="wrap">
+		<div id="menu">
+			<img src="img/home/logoRe.png" x="0" y="0" onclick="toHomepage()">
+			<h1>ARTIST</h1>
+			<ul>
+				<li class="a_menu">เฉลิมชัย โฆษิตพิพัฒน์</li>
+				<li class="a_menu">ประหยัด พงษ์ดำ</li>
+				<li class="a_menu">ปรีชา เถาทอง</li>
+				<li class="a_menu">พิชัย นิรันต์</li>
+				<li class="a_menu">เนติกร ชินโย</li>
+				<li class="a_menu">จินตนา เปี่ยมศิริ</li>
+				<li class="a_menu">ปัญญา วิจินธนสาร</li>
+				<li class="a_menu">ธีระวัฒน์ คะนะมะ</li>
+			</ul>
+		</div>
+
+		<div id="c_art" x="2">
+			<div id="artistImg" class="artistImg01">
+				<div class="artistName">
+					<h2>เฉลิมชัย</h2>
+					<h2>โฆษิตพิพัฒน์</h2>
+				</div>
+				<div class="port">
+					<p>เป็นจิตรกรไทยที่มีผลงานศิลปะมากมายทั้งสถาปัตยกรรม จิตรกรรม ประติมากรรม และยังได้รับการยกย่องเป็นศิลปินแห่งชาติ</p>
+				</div>
+				
+			</div>
+			<br>
+			<div style="display: flex; align-content: center; position: relative;">
+				<img src="img/artist/001-1.jpg">
+			</div>
+		</div>
+	</div>
 
 </body>
 </html>
