--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
 	<div id="homepage" class="home">
 		<div id="menu">
-			<img src="img/logoRe.png" x="0" y="0" onclick="toHomepage()">
+			<img src="img/home/logoRe.png" x="0" y="0" onclick="toHomepage()">
 			<ul>
-				<li id="m_story">STORY</li>
-				<li id="m_history">HISTORY</li>
-				<li id="m_media">MEDIA</li>
-				<li id="m_artist">ARTIST</li>
+				<li id="m_story" class="h_menu">STORY</li>
+				<li id="m_history" class="h_menu">HISTORY</li>
+				<li id="m_media" class="h_menu">MEDIA</li>
+				<li id="m_artist" class="h_menu">ARTIST</li>
 			</ul>
 		</div>
 
@@ -24,8 +24,6 @@
 		</div>
 
 	</div>
-
-	<button href="artist.html">df</button>
 
 	<script type="text/javascript" src="web.js"></script>
 
