--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
 <body>
 	<div id="homepage" class="home">
 		
-		<div id="menu">
-			<img src="img/home/logoRe.png" x="0" y="0" onclick="toHomepage()">
-			<ul>
+		<div id="obj">
+			
+		</div>
+
+		<div class="menu">
+			<img src="img/home/logo.svg" id="logo" onclick="toHomepage()">
+			<ul id="listMenu">
 				<li id="m_story" class="h_menu">STORY</li>
 				<li id="m_history" class="h_menu">HISTORY</li>
 				<li id="m_media" class="h_menu">MEDIA</li>
