--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<div id="homepage" class="home">
+	<div id="homepage">
 		
 		<div id="obj">
 			
