--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<div class="menu">
+	<div class="col-1 menu">
 		<img src="img/home/logo.svg" id="logo" onclick="toHomepage()">
 		<ul id="listMenu">
 			<li id="m_story" class="h_menu">STORY</li>
@@ -18,7 +18,7 @@
 			<li id="m_artist" class="h_menu">ARTIST</li>
 		</ul>
 	</div>
-	<div id="homepage">
+	<div id="homepage" class="home-1">
 		
 		<div id="obj">
 			
