--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<div class="col-1 menu">
+	<div class="menu">
 		<img src="img/home/logo.svg" id="logo" onclick="toHomepage()">
 		<ul id="listMenu">
 			<li id="m_story" class="h_menu">STORY</li>
