--- a/index.html
+++ b/index.html
@@ -6,11 +6,31 @@
 	<meta name=description content="">
 	<meta name=viewport content="width=device-width, initial-scale=1">
 
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<div class="menu">
+	<!-- <div class="topnav" id="myTopnav">
 		<img src="img/home/logo.svg" id="logo" onclick="toHomepage()">
+		<a href="javascript:void(0);" class="icon" onclick="showNavbar()">
+			<i class="fa fa-bars"></i>
+		</a>
+	</div> -->
+
+	<div class="" id="myTopnav">
+		<img src="img/home/logo.svg" id="logo" onclick="toHomepage()">
+		<a href="#home" class="active">Home</a>
+		<a href="#news">News</a>
+		<a href="#contact">Contact</a>
+		<a href="#about">About</a>
+		<a href="javascript:void(0);" class="icon" onclick="myFunction()">
+			<i class="fa fa-bars"></i>
+		</a>
+	</div>
+
+	<div class="menu">
+		<img src="" id="logo" onclick="toHomepage()">
 		<ul id="listMenu">
 			<li id="m_story" class="h_menu">STORY</li>
 			<li id="m_history" class="h_menu">HISTORY</li>
