--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<a href="#contact">Contact</a>
 		<a href="#about">About</a>
 		<a href="javascript:void(0);" class="icon" onclick="myFunction()">
-			<i class="fa fa-bars"></i>
+			<i class="fa fa-bars green"></i>
 		</a>
 	</div>
 
