--- a/history.html
+++ b/history.html
@@ -8,29 +8,32 @@
 	<meta name=viewport content="width=device-width, initial-scale=1">
 
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 <body>
+	<div id="warp">
 
-	<div class="w3-row">
-		<div class="w3-col w3-left w3-container" style="width:450px; height: 100vh; padding: 50px;">
-			<h2>พระมหาชนก</h2>
-			<h1>HISTORY</h1>
-			<ul class="innerMenu">
-				<li>ผลงานการประพันธ์ของพระบาทสมเด็จพระปรมินทรมหาภูมิพลอดุลยเดช</li><br>
-				<li>ประวัติความเป็นมาของพระราชนิพนธ์พระมหาชนก</li>
-			</ul>
+		<div class="h-menu">
+			<a href="index.html"><h2 class="darkOrange">พระมหาชนก</h2></a>
+			<h1 class="darkGreen">HISTORY</h1>
+			<ul class="innerMenu darkGreen Srinakharinwirot">
+				<li id="h-menu1">ผลงานการประพันธ์ของพระบาทสมเด็จพระปรมินทรมหาภูมิพลอดุลยเดช</li><br>
+				<li id="h-menu2">ประวัติความเป็นมาของพระราชนิพนธ์พระมหาชนก</li>
+			</ul>	
 		</div>
-		<div class="w3-rest w3-container" style="height: 100vh;padding: 50px;">
+		<div class="h-img">
 			<img src="img/history/img001Re.jpg">
 		</div>
-		<div class="w3-col w3-right w3-container" style="width:850px;height: 100vh;padding: 50px;">
-			<h1 class="lightOrange">ประวัติความเป็นมาของพระราชนิพนธ์พระมหาชนก</h1>
-			<p class="darkGreen">ความเพียรพยายามนำไปสู่ความสำเร็จ เมื่อตั้งใจจะทำสิ่งใดแล้วต้องมีขันติหรือความอดทน ไม่ย่อท้อต่อปัญหาหรืออุปสรรค
+		<div class="h-content">
+			<h1 class="lightOrange Srinakharinwirot">ประวัติความเป็นมาของพระราชนิพนธ์พระมหาชนก</h1>
+			<p class="darkGreen baiJamjuree">ความเพียรพยายามนำไปสู่ความสำเร็จ เมื่อตั้งใจจะทำสิ่งใดแล้วต้องมีขันติหรือความอดทน ไม่ย่อท้อต่อปัญหาหรืออุปสรรค
 			สมัยที่ยังเป็นเด็กนักเรียนอยู่นั่น ได้มีโอกาสได้เรืยนเรื่องพระเจ้า 10 ชาติจากวิชาภาษาไทยและวิชาพระพุทธศาสนามาบ้าง จำได้ว่าท่องจำพระนามของพระเจ้า 10 ชาติว่า เต ชะ สุ เน มะ ภู จะ นา วิ เว แต่จะมีอยู่พระนามหนึ่งที่ชอบกว่าพระนามอื่นๆ และเป็นหนังสือการ์ตูนด้วย นั่นคือชาติที่ใช้ท่องจำแบบย่อๆ ว่า ชะ ซึ่งคำว่า ชะ นี้ก็มาจาก ชนก ที่หมายถึง พระมหาชนก</p>
 		</div>
 		
 	</div>
+
+	<script type="text/javascript">
+		
+	</script>
 
 </body>
 </html>
