--- a/artist.html
+++ b/artist.html
@@ -6,12 +6,26 @@
 	<meta name=description content="">
 	<meta name=viewport content="width=device-width, initial-scale=1">
 
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+
+	<div class="" id="myTopnav">
+		<img src="img/home/logo.svg" id="logo" onclick="toHomepage()">
+		<a href="#home" class="active">Home</a>
+		<a href="#news">News</a>
+		<a href="#contact">Contact</a>
+		<a href="#about">About</a>
+		<a href="javascript:void(0);" class="icon" onclick="myFunction()">
+			<i class="fa fa-bars green"></i>
+		</a>
+	</div>
+
 	<div class="wrap">
-		<div id="menu">
-			<img src="img/home/logoRe.png" x="0" y="0" onclick="toHomepage()">
+		<div class="menu">
+			<img id="logo" onclick="toHomepage()">
 			<h1>ARTIST</h1>
 			<ul>
 				<li class="a_menu">เฉลิมชัย โฆษิตพิพัฒน์</li>
@@ -25,7 +39,7 @@
 			</ul>
 		</div>
 
-		<div id="c_art" x="2">
+		<div id="c_art">
 			<div id="artistImg" class="artistImg01">
 				<div class="artistName">
 					<h2>เฉลิมชัย</h2>
@@ -42,6 +56,8 @@
 			</div>
 		</div>
 	</div>
+
+	<script type="text/javascript" src="responsive.js"></script>
 
 </body>
 </html>
