--- a/index.html
+++ b/index.html
@@ -11,12 +11,6 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<!-- <div class="topnav" id="myTopnav">
-		<img src="img/home/logo.svg" id="logo" onclick="toHomepage()">
-		<a href="javascript:void(0);" class="icon" onclick="showNavbar()">
-			<i class="fa fa-bars"></i>
-		</a>
-	</div> -->
 
 	<div class="" id="myTopnav">
 		<img src="img/home/logo.svg" id="logo" onclick="toHomepage()">
@@ -48,7 +42,8 @@
 
 	</div>
 
-	<script type="text/javascript" src="web.js"></script>
+	<script type="text/javascript" src="home.js"></script>
+	<script type="text/javascript" src="responsive.js"></script>
 
 </body>
 </html>
