--- a/history.html
+++ b/history.html
@@ -39,9 +39,9 @@
 			<i class="fas fa-chevron-circle-left lightGreen" id="left-arrow"></i>
 		</div>
 		
-		<div class="h-content" id="h_content">
+		<div class="h-content setOverflow" id="h_content">
 			<div class="h-section-1" id="sec_1">
-				<h1 class="lightOrange Srinakharinwirot" id="h_innerHead">ผลงานการประพันธ์ของพระบาทสมเด็จพระปรมินทรมหาภูมิพลอดุลยเดช</h1>
+				<h1 class="lightOrange Srinakharinwirot" id="h_innerHead" style="letter-spacing: 2px;">ผลงานการประพันธ์ของพระบาทสมเด็จพระปรมินทรมหาภูมิพลอดุลยเดช</h1>
 				<img src="img/history/KingRe.jpg" id="h_imgContent">
 				<div class="h-innerContent">
 					<p class="darkGreen baiJamjuree" id="h_innerContent_sec1">
@@ -141,32 +141,7 @@
 		content = [
 		{
 			"i":"“นักเขียน นักประพันธ์ งานสำคัญก็คือ แสดงความคิดของตอนออกมาเป็นเรื่องชีวิต หรือเรื่องแต่งขึ้นมา เพื่อให้ผู้อื่นได้ประโยชน์ คือความรู้บ้าง บันเทิงบ้าง นักแสดงความคิดสำคัญมาก เพราะว่ามีอิทธิพลต่อชีวิตของมวลมนุษย์ อาจทำให้เกิดความคล้อยตามไปและตัวท่านเขียนดีก็ยิ่งคล้อยตามกันมาก ฉะนั้น นักประพันธ์ต้องมีความรับผิดชอบสูง เพราะท่านเป็นผู้ปั้นความคิดและความบริสุทธิ์ในความคิด จึงเป็นเรื่องที่สำคัญ ดังบทความกลั่นกรองไว้ในสมองว่า สิ่งที่จะเขียนออกมาจะไม่แสลง ไม่ทำลายความคิดของประชากร ไม่ทำลายผู้อื่น และตนเอง คือมีเสรีภาพในการเขียนอย่างเต็มที่ในขอบเขตของศีลธรรม”",
-			"ii":"(พระบรมราโชวาทพระราชทานแก่คณะกรรมการสมาคมนักเขียนแห่งประเทศไทย ณ พระตำหนักจิตรลดารโหฐาน วันศุกร์ที่ 3 พฤศจิกายน 2515)",
-			"iii":"“พระราชานุกิจรัชกาลที่8”",
-			"iv":"กำหนดเวลาที่พระเจ้าแผ่นดินจะทรงประพฤติพระราชกิจต่างๆ ประจำทุกวันเป็นส่วนพระองค์ โดยอยู๋ในกฎมนเทียรบาล ตั้งแต่ครั้งรัชกาลสมเด็จพระบรมไตรโลกนาถ ซึ่งแสดงถึงพระปรีชาญาณด้านภาษาไทยของพระองค์ตั้งแต่ยังทรงพระเยาว์",
-			"v":"“เมื่อข้าพเจ้าจากสยามมาสู่สวิตเซอร์แลนด์”",
-			"vi":"พิมพ์ครั้งแรกในหนังสือรายเดือน วงวรรณคดี ฉบับประจำเดือนสิงหาคม พ.ศ.2490 เป็นบันทึกพระราชนิพนธ์ขึ้นในช่วงเวลาเสด็จพระราชดำเนินเพื่อกลับไปศึกษาต่อประเทศสวิตเซอร์แลนด์ เมื่อวันที่ 19 สิงหาคม พ.ศ.2489 หลังจากที่ พระองค์เสด็จขึ้นครองราชย์ เมื่อวันที่ 9 มิถุนายน พ.ศ.2489 โดยทรงบันทึกเป็นเรื่องราวการเดินทาง แสดงถึงความรู้สึกของพระองค์ที่ห่วงใยพสกนิกรอย่างยิ่ง รวมถึงเหตุการณ์ที่ทรงพบเจอ",
-			"vii":"“นายอินทร์ผู้ปิดทองหลังพระ”",
-			"viii":"เป็นพระราชนิพนธ์แปลเมื่อ พ.ศ.2537 ต้นฉบับภาษาอังกฤษเรื่อง “A MAN CALLED INTREPID” บทประพันธ์ของ เซอร์วิลเลียม สตีเฟนสัน ใช้เวลาในการแปลถึง 3 ปี",
-			"ix":"“ติโต”",
-			"x":"เป็นพระราชนิพนธ์แปลเมื่อ พ.ศ.2537 ต้นฉบับจากเรื่อง “TITO” ของ ฟิลลิส ออตี้ เพื่อใช้ศึกษาและเรียนรู้บุคคลที่น่าสนใจของโลกคนหนึ่ง คือ ติโต หรือรู้จักกันในนาม จอมพลติโต เดิมชื่อ โจซิบ โบรซ เป็นนายกรัฐมนตรีคอมมิวนิสต์คนแรกและประธานาธิบดีของประเทศยูโกสลาเวีย",
-			"xi":"“พระมหาชนก”",
-			"xii":"ตีพิมพ์เมื่อ พ.ศ.2539 โดยมีทั้งภาคภาษาไทยและภาษาอังกฤษอยู่ในเล่มเดียวกัน โดยเป็นเรื่องหนึ่งในทศชาติชาดก อันเป็นชาดก 10 ชาติ สุดท้ายก่อนที่พระโพธิสัตว์จะมาประสูติเป็นเจ้าชายสิทธัตถะและตรัสรู้เป็นพระสัมมาสัมพุทธเจ้า ชาดกเรื่องนี้เป็นการบำเพ็ญเพียรบารมี พระบาทสมเด็จพระปรมินทรมหาภูมิพลอดุลเดชทรงแปลเป็นภาษาอังกฤษตรงจากมหาชนกชาดกและยังทรงแปลเป็นภาษาสันสกฤตประกอบอีกภาษา",
-			"xiii":"“ทองแดง”",
-			"xiv":"พระราชนิพนธ์เล่มนี้เป็นภาษาไทยและภาษาอังกฤษในเล่มเดียวกัน และเป็นหนังสือพระราชนิพนธ์ที่ติดอันดับขายดีที่สุดของประเทศในปี พ.ศ.2545 เนื้อหาหลักเป็นเรื่องความกตัญญูรู้คุณของคุณทองแดง สุนัขทรงเลี้ยง รวมถึงความจงรักภักดี ความมีมารยาท และการสั่งสอนลูกของคุณทองแดง และในพระราชนิพนธ์ได้ทรงยกย่องคุณทองแดงที่มีต่อแม่มะลิ ‘ผิดกับคนอื่นที่เมื่อกลายมาเป็นคนสำคัญแล้วมักจะลืมตัว และดูหมิ่นผู้มีพระคุณซึ่งเป็นคนต่ำต้อย’ อันเป็นประโยชน์ต่อการดำรงชีวิต",
-			"xv":"“พระราชดำรัส”",
-			"xvi":"ในวันที่ 4 ธันวาคม พ.ศ.2532 พระบาทสมเด็จพระปรมินทรมหาภูมิพลอดุลเดชทรงแปลเป็นภาษาอังกฤษ โดยรวบรวมพระราชดำรัสที่พระราชทานแก่คณะบุคคลที่เข้าเฝ้าถวายชัยมงคล เนื่องในโอกาสวันเฉลิพระชนมพรรษาของทุกปี พระองค์ทรงเริ่มแปลพระราชดำรัสเรื่องน้ำและสิ่งแวดล้อม",
-			"xvii":"นอกจากนี้ยังทรงแปลและเรียบเรียงบทความ อีกหลายเรื่องด้วยกัน",
-			"xviii":"1. ข่าวจากวิทยุเพื่อสันติภาพและความก้าวหน้า จาก Radio Peace and Progress ในนิตยสาร Intelligence Degest ฉบับลงวันที่ 1 เมษายน ค.ศ. 1975 (พ.ศ. 2518)",
-			"xix":"2. การคืบหน้าของมาร์กศิสต์ จาก The Marxist Advance Special Brief",
-			"xx":"3. รายงานตามนโยบายคอมมิวนิสต์ จาก Following the Communist Line",
-			"xxi":"4. ฝันร้ายไม่จำเป็นจะต้องเป็นจริง จาก No Need for Apocalypse ในนิตยสาร The Economist ฉบับลงวันที่ 17 พฤษภาคม ค.ศ. 1975(พ.ศ. 2518)",
-			"xxii":"5. รายงานจากลอนดอน จาก London Report ในนิตยสาร Intelligence Digest : Weekly Review ฉบับลงวันที่ 18 มิถุนายน ค.ศ.1975 (พ.ศ. 2518)",
-			"xxiii":"6. ประเทศจีนอยู่ยง จง Eternal China ในนิตยสาร Intelligence Digest : Weekly Review ฉบับลงวันที่ 13 มิถุนายน ค.ศ.1975(พ.ศ. 2518)",
-			"xxiv":"7. ทัศนะน่าอัศจรรย์จากชิลีหลังสมัยอาล์เลนเด จาก Surprising Views from a Post-Allende Chile ในนิตยาสาร Intelligence Digest : Weekly Review ฉบับลงวันที่ 20 มิถุนายน ค.ศ.1975 (พ.ศ. 2518)",
-			"xxv":"8. เขาว่าอย่างนั้น เราก็ว่าอย่างนั้น จาก Sauce for the Gander… ในนิตยาสาร Intelligence Digest : Weekly Review ฉบับลงวันที่ 20 มิถุนายน ค.ศ.1975 (พ.ศ. 2518)",
-			"xxvi":"9. จีนแดง : ตั้วเฮียค้ายาเสพติดแห่งโลก จาก Red China : Drug Pushers to the World ในนิตยาสาร Intelligence Digest : Weekly Review ฉบับลงวันที่ 20 มิถุนายน ค.ศ.1975 (พ.ศ. 2518)",
-			"xxvii":"10. วีรบุรุษตามสมัยนิยม จาก Fashion n Heroes โดย George F.Will ในนิตยสาร Newsweek ฉบับลงวันที่ 6 สิงหาคม ค.ศ.1979 (พ.ศ. 2522)"
+			"ii":"(พระบรมราโชวาทพระราชทานแก่คณะกรรมการสมาคมนักเขียนแห่งประเทศไทย ณ พระตำหนักจิตรลดารโหฐาน วันศุกร์ที่ 3 พฤศจิกายน 2515)"
 		},
 		{
 			"i":"พระมหาชนกเป็นเรื่องหนึ่งในทศชาติชาดก อันเป็นชาดก 10 ชาติสุดท้ายก่อนที่พระโพธิสัตว์จะมาประสูติเป็นเจ้าชายสิทธัตถะ และตรัสรู้เป็นพระสัมพุทธเจ้า ชาดกเรื่องนี้เป็นการบำเพ็ญเพียรบารมี พระบาทสมเด็จพระปรมินทรมหาภูมิพลอดุลเดชทรงสนพระราชหฤทัย เนื่องจากได้ทรงสดับพระธรรมเทศนาของสมเด็จพระมหาวีรวงศ์ แห่งวัดราชผาติการาม เมื่อปีพ.ศ.๒๕๒๐ เรื่องพระมหาชนกเสด็จทอดพระเนตรพระราชอุทยานในกรุงมิถิลา จึงทรงค้นคว้าเรื่องพระมหาชนกในพระไตรปิฎกเพิ่มเติม และทรงแปลเป็นภาษาอังกฤษตรงจากมหาชนกชาดกตั้งแต่ต้นเรื่อง โดยดัดแปลงเล็กน้อยจากพระสุตตันตปิฎกขุททกนิกายชาดก เล่มที่ ๔ ภาคที่ ๒ เพื่อให้เข้าใใจง่ายขึ้น ทรงแปลพระมหาชนกชาดกเสร็จสมบูรณ์ เมื่อพ.ศ.๒๕๓๑ และโปรดเกล้าโปรดกระหม่อมให้จัดพิมพ์ในปีกาญจนาภิเษกทรงครองสิริราชสมบัติครบ ๕๐ ปี ในวันที่ ๒๘ มีนาคม ๒๕๓๙ และได้มีการพิมพ์เป็นฉบับการ์ตูน ในปีพ.ศ.๒๕๔๒",
@@ -182,12 +157,13 @@
 			h_menu1.classList.add("clickMenu");
 			h_imgContent.src = "img/history/KingRe.jpg"
 			h_innerHead.innerText = "ผลงานการประพันธ์ของพระบาทสมเด็จพระปรมินทรมหาภูมิพลอดุลยเดช";
+			h_innerContent_sec1.innerHTML = content[0].i + '<br><br>' + content[0].ii;
 			sec_2.classList.remove("setOpa");
 			sec_3.classList.remove("setOpa");
 			sec_4.classList.remove("setOpa");
 			sec_5.classList.remove("setOpa");
 			sec_6.classList.remove("setOpa");
-			h_content.classList.remove("setOverflow");
+			h_content.classList.add("setOverflow");
 		}
 		
 		function clickContent2(){
@@ -203,7 +179,7 @@
 			sec_4.classList.add("setOpa");
 			sec_5.classList.add("setOpa");
 			sec_6.classList.add("setOpa");
-			h_content.classList.add("setOverflow");
+			h_content.classList.remove("setOverflow");
 		}
 	</script>
 
