--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 			<li id="m_media" class="h_menu">MEDIA</li>
 			<li id="m_artist" class="h_menu">ARTIST</li>
 		</ul>
+		<p id="caption" class="darkGreen"></p>
 	</div>
 	<div id="homepage" class="home-1">
 		
