--- a/index.html
+++ b/index.html
@@ -6,33 +6,30 @@
 	<meta name=description content="">
 	<meta name=viewport content="width=device-width, initial-scale=1">
 
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+	<!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"> -->
 
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-
-	<div class="" id="myTopnav">
-		<img src="img/home/logo.svg" id="logo" onclick="toHomepage()">
-		<a href="#home" class="active">Home</a>
-		<a href="#news">News</a>
-		<a href="#contact">Contact</a>
-		<a href="#about">About</a>
-		<a href="javascript:void(0);" class="icon" onclick="myFunction()">
-			<i class="fa fa-bars green"></i>
-		</a>
+	
+	<div class="menu" id="menuBar">
+		<div id="divLogo">
+			<img src="img/home/logo.svg" id="logo" onclick="toHomepage()">
+		</div>
+		
+		<div id="listMenu">
+			<ul>
+				<li id="m_story" class="h_menu">STORY</li>
+				<li id="m_history" class="h_menu">HISTORY</li>
+				<li id="m_media" class="h_menu">MEDIA</li>
+				<li id="m_artist" class="h_menu">ARTIST</li>
+			</ul>
+		</div>
+		<div id="caption">
+			<p id="captionText"></p>
+		</div>
 	</div>
 
-	<div class="menu">
-		<img src="" id="logo" onclick="toHomepage()">
-		<ul id="listMenu">
-			<li id="m_story" class="h_menu">STORY</li>
-			<li id="m_history" class="h_menu">HISTORY</li>
-			<li id="m_media" class="h_menu">MEDIA</li>
-			<li id="m_artist" class="h_menu">ARTIST</li>
-		</ul>
-		<!-- <p id="caption" class="darkGreen"></p> -->
-	</div>
 	<div id="homepage" class="home-1">
 		
 		<div id="obj">
