--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	
+
 	<div class="menu" id="menuBar">
 		<div id="divLogo">
 			<img src="img/home/logo.svg" id="logo" onclick="toHomepage()">
@@ -25,6 +25,7 @@
 				<li id="m_artist" class="h_menu">ARTIST</li>
 			</ul>
 		</div>
+		<div id="clickMe"></div>
 		<div id="caption">
 			<p id="captionText"></p>
 		</div>
@@ -34,14 +35,11 @@
 		
 		<div id="obj">
 			
-		</div>
-
-		
+		</div>	
 
 	</div>
-
+	
 	<script type="text/javascript" src="home.js"></script>
-	<script type="text/javascript" src="responsive.js"></script>
 
 </body>
 </html>
