--- a/history.html
+++ b/history.html
@@ -139,8 +139,8 @@
 						<br>๕. รายงานจากลอนดอน จาก London Report ในนิตยสาร Intelligence Digest : Weekly Review ฉบับลงวันที่ ๑๘ มิถุนายน ค.ศ.๑๙๗๕ (พ.ศ. ๒๕๑๘)
 						<br>๖. ประเทศจีนอยู่ยง จง Eternal China ในนิตยสาร Intelligence Digest : Weekly Review ฉบับลงวันที่ ๑๓ มิถุนายน ค.ศ.๑๙๗๕(พ.ศ. ๒๕๑๘)
 						<br>๗. ทัศนะน่าอัศจรรย์จากชิลีหลังสมัยอาล์เลนเด จาก Surprising Views from a Post-Allende Chile ในนิตยาสาร Intelligence Digest : Weekly Review ฉบับลงวันที่ ๒๐ มิถุนายน ค.ศ.๑๙๗๕ (พ.ศ. ๒๕๑๘)
-						<br>๘. เขาว่าอย่างนั้น เราก็ว่าอย่างนั้น จาก Sauce for the Gander… ในนิตยาสาร Intelligence Digest : Weekly Review   ฉบับลงวันที่ ๒๐ มิถุนายน ค.ศ.๑๙๗๕ (พ.ศ. ๒๕๑๘)
-						<br>๙. จีนแดง : ตั้วเฮียค้ายาเสพติดแห่งโลก จาก Red China : Drug Pushers to the World ในนิตยาสาร Intelligence Digest : Weekly Review ฉบับลงวันที่ ๒๐ มิถุนายน ค.ศ.๑๙๗๕ (พ.ศ. ๒๕๑๘)
+						<br>๘. เขาว่าอย่างนั้น เราก็ว่าอย่างนั้น จาก Sauce for the Gander… ในนิตยสาร Intelligence Digest : Weekly Review   ฉบับลงวันที่ ๒๐ มิถุนายน ค.ศ.๑๙๗๕ (พ.ศ. ๒๕๑๘)
+						<br>๙. จีนแดง : ตั้วเฮียค้ายาเสพติดแห่งโลก จาก Red China : Drug Pushers to the World ในนิตยสาร Intelligence Digest : Weekly Review ฉบับลงวันที่ ๒๐ มิถุนายน ค.ศ.๑๙๗๕ (พ.ศ. ๒๕๑๘)
 						<br>๑๐. วีรบุรุษตามสมัยนิยม จาก Fashion n Heroes โดย George F.Will ในนิตยสาร Newsweek ฉบับลงวันที่ ๖ สิงหาคม ค.ศ.๑๙๗๙ (พ.ศ. ๒๕๒๒)
 					</p>
 				</div>
