--- a/story.html
+++ b/story.html
@@ -2,8 +2,33 @@
 <html>
 <head>
 	<title>Story</title>
+
+	<meta charset=utf-8>
+	<meta name=description content="">
+	<meta name=viewport content="width=device-width, initial-scale=1">
+
+	<link rel="stylesheet" type="text/css" href="style.css">
+
+	<style type="text/css">
+		@media only screen and (min-width: 770px) {
+			#menuBar{display: none;}
+		}
+	</style>
 </head>
 <body>
+
+	<div id="warp">
+
+		<div class="h-left" id="h_left">
+				
+		</div>
+
+		<div class="h-menu" id="h_menu">
+			<a href="index.html"><h2 class="darkOrange">พระมหาชนก</h2></a>
+			<h1 class="darkGreen Winter">STORY</h1>
+			<i class="fas fa-chevron-circle-left lightGreen" id="left-arrow"></i>
+		</div>
+	</div>
 
 </body>
 </html>
