--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name=description content="">
 	<meta name=viewport content="width=device-width, initial-scale=1">
 
-	<!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"> -->
+	
 
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -24,6 +24,7 @@
 				<li id="m_media" class="h_menu">MEDIA</li>
 				<li id="m_artist" class="h_menu">ARTIST</li>
 			</ul>
+			
 		</div>
 		<div id="clickMe"></div>
 		<div id="caption">
@@ -40,6 +41,17 @@
 	</div>
 	
 	<script type="text/javascript" src="home.js"></script>
+
+	<!-- <script type="text/javascript">
+		function myFunction() {
+			var x = document.getElementById("menuBar");
+			if (x.className === "menuv") {
+				x.className += " responsive";
+			} else {
+				x.className = "menu";
+			}
+		}
+	</script> -->
 
 </body>
 </html>
