--- a/history.html
+++ b/history.html
@@ -39,7 +39,8 @@
 				<li id="h_menu2">ประวัติความเป็นมาของพระราชนิพนธ์พระมหาชนก</li>
 			</ul>
 			<div id="backHome">
-				<i class="fa fa-chevron-circle-left lightGreen" style="font-size:48px"></i>
+				<a href="index.html"><i class="fa fa-chevron-circle-left lightGreen" style="font-size:48px"></i></a>
+				
 			</div>			
 			
 		</div>
