--- a/history.html
+++ b/history.html
@@ -46,7 +46,7 @@
 		</div>
 		
 		<div class="h-content setOverflow" id="h_content">
-			<h1 class="lightOrange Srinakharinwirot" id="h_innerHead" style="letter-spacing: 2px;">ผลงานการประพันธ์ของพระบาทสมเด็จพระปรมินทรมหาภูมิพลอดุลยเดช</h1>
+			<p class="lightOrange Srinakharinwirot header" id="h_innerHead" style="letter-spacing: 2px;">ผลงานการประพันธ์ของพระบาทสมเด็จพระปรมินทรมหาภูมิพลอดุลยเดช</p>
 			<div class="h-section-1" id="sec_1">
 				<div class="img-left">
 					<img src="img/history/KingRe.jpg" class="h_imgContent" id="h_img">
