--- a/artist.html
+++ b/artist.html
@@ -51,12 +51,12 @@
 			
 		</div>
 		
-		<div class="h-content" id="a_content1">			
+		<div class="a-content" id="a_content1">			
 			
-			<div class="h-section-1" id="sec_1">
+			<div class="a-section-1">
 
 				<div class="a-img">
-					<img src="img/artist/1/artist.jpg" class="h_imgContent" id="h_img">
+					<img src="img/artist/1/artist.jpg" class="h_imgContent" id="a_img">
 				</div>
 
 				<div class="artistName">
@@ -72,18 +72,18 @@
 				</div>
 
 				<div class="a-work">
-					<img src="img/artist/1/work.jpg">
+					<img src="img/artist/1/work.jpg" style="width: 60%;">
 				</div>
 			</div>
 			
 		</div>
 
-		<div class="h-content setDisplay" id="a_content2">			
+		<div class="a-content setDisplay" id="a_content2">			
 			
-			<div class="h-section-1" id="sec_1">
+			<div class="a-section-1">
 
 				<div class="a-img">
-					<img src="img/artist/2/re.jpg" class="h_imgContent" id="h_img">
+					<img src="img/artist/2/re.jpg" class="h_imgContent" id="a_img">
 				</div>
 
 				<div class="artistName">
@@ -106,12 +106,12 @@
 			
 		</div>
 
-		<div class="h-content setDisplay" id="a_content3">			
+		<div class="a-content setDisplay" id="a_content3">			
 			
-			<div class="h-section-1" id="sec_1">
+			<div class="a-section-1">
 
 				<div class="a-img">
-					<img src="img/artist/3/re.jpg" class="h_imgContent" id="h_img">
+					<img src="img/artist/3/re.jpg" class="h_imgContent" id="a_img">
 				</div>
 
 				<div class="artistName">
@@ -134,12 +134,12 @@
 			
 		</div>
 
-		<div class="h-content setDisplay" id="a_content4">			
+		<div class="a-content setDisplay" id="a_content4">			
 			
-			<div class="h-section-1" id="sec_1">
+			<div class="a-section-1">
 
 				<div class="a-img">
-					<img src="img/artist/4/a.jpg" class="h_imgContent" id="h_img">
+					<img src="img/artist/4/a.jpg" class="h_imgContent" id="a_img">
 				</div>
 
 				<div class="artistName">
@@ -162,12 +162,12 @@
 			
 		</div>
 
-		<div class="h-content setDisplay" id="a_content5">			
+		<div class="a-content setDisplay" id="a_content5">			
 			
-			<div class="h-section-1" id="sec_1">
+			<div class="a-section-1">
 
 				<div class="a-img">
-					<img src="img/artist/5/a.jpg" class="h_imgContent" id="h_img">
+					<img src="img/artist/5/a.jpg" class="h_imgContent" id="a_img">
 				</div>
 
 				<div class="artistName">
@@ -191,12 +191,12 @@
 			
 		</div>
 
-		<div class="h-content setDisplay" id="a_content6">			
+		<div class="a-content setDisplay" id="a_content6">			
 			
-			<div class="h-section-1" id="sec_1">
+			<div class="a-section-1">
 
 				<div class="a-img">
-					<img src="img/artist/6/a.jpg" class="h_imgContent" id="h_img">
+					<img src="img/artist/6/a.jpg" class="h_imgContent" id="a_img">
 				</div>
 
 				<div class="artistName">
@@ -220,12 +220,12 @@
 			
 		</div>
 
-		<div class="h-content setDisplay" id="a_content7">			
+		<div class="a-content setDisplay" id="a_content7">			
 			
-			<div class="h-section-1" id="sec_1">
+			<div class="a-section-1">
 
 				<div class="a-img">
-					<img src="img/artist/7/a.jpg" class="h_imgContent" id="h_img">
+					<img src="img/artist/7/a.jpg" class="h_imgContent" id="a_img">
 				</div>
 
 				<div class="artistName">
@@ -249,12 +249,12 @@
 			
 		</div>
 
-		<div class="h-content setDisplay" id="a_content8">			
+		<div class="a-content setDisplay" id="a_content8">			
 			
-			<div class="h-section-1" id="sec_1">
+			<div class="a-section-1">
 
 				<div class="a-img">
-					<img src="img/artist/8/a.jpg" class="h_imgContent" id="h_img">
+					<img src="img/artist/8/a.jpg" class="h_imgContent" id="a_img">
 				</div>
 
 				<div class="artistName">
@@ -331,6 +331,7 @@
 		
 		function clickContent1(){
 			clearClick();
+			inner_menu.classList.remove("show-menu");
 			a_content1.classList.remove("setDisplay");
 			h_menu1.classList.add("green");
 			h_menu1.classList.add("clickMenu");			
@@ -345,6 +346,7 @@
 		
 		function clickContent2(){
 			clearClick();
+			inner_menu.classList.remove("show-menu");
 			a_content2.classList.remove("setDisplay");
 			h_menu2.classList.add("green");
 			h_menu2.classList.add("clickMenu");
@@ -359,6 +361,7 @@
 
 		function clickContent3(){
 			clearClick();
+			inner_menu.classList.remove("show-menu");
 			a_content3.classList.remove("setDisplay");
 			h_menu3.classList.add("green");
 			h_menu3.classList.add("clickMenu");			
@@ -373,6 +376,7 @@
 
 		function clickContent4(){
 			clearClick();
+			inner_menu.classList.remove("show-menu");
 			a_content4.classList.remove("setDisplay");
 			h_menu4.classList.add("green");
 			h_menu4.classList.add("clickMenu");
@@ -387,6 +391,7 @@
 
 		function clickContent5(){
 			clearClick();
+			inner_menu.classList.remove("show-menu");
 			a_content5.classList.remove("setDisplay");
 			h_menu5.classList.add("green");
 			h_menu5.classList.add("clickMenu");
@@ -401,6 +406,7 @@
 
 		function clickContent6(){
 			clearClick();
+			inner_menu.classList.remove("show-menu");
 			a_content6.classList.remove("setDisplay");
 			h_menu6.classList.add("green");
 			h_menu6.classList.add("clickMenu");
@@ -415,6 +421,7 @@
 
 		function clickContent7(){
 			clearClick();
+			inner_menu.classList.remove("show-menu");
 			a_content7.classList.remove("setDisplay");
 			h_menu7.classList.add("green");
 			h_menu7.classList.add("clickMenu");
@@ -429,6 +436,7 @@
 
 		function clickContent8(){
 			clearClick();
+			inner_menu.classList.remove("show-menu");
 			a_content8.classList.remove("setDisplay");
 			h_menu8.classList.add("green");
 			h_menu8.classList.add("clickMenu");
