--- a/artist.html
+++ b/artist.html
@@ -72,7 +72,7 @@
 				</div>
 
 				<div class="a-work">
-					<img src="img/artist/1/work.jpg" style="width: 60%;">
+					<img src="img/artist/1/work.jpg" class="mobile-width">
 				</div>
 			</div>
 			
@@ -99,8 +99,8 @@
 				</div>
 
 				<div class="a-work">
-					<img src="img/artist/2/work1.jpg">
-					<img src="img/artist/2/work2.jpg">
+					<img src="img/artist/2/work1.jpg" class="mobile-width">
+					<img src="img/artist/2/work2.jpg" class="mobile-width">
 				</div>
 			</div>
 			
@@ -127,8 +127,8 @@
 				</div>
 
 				<div class="a-work">
-					<img src="img/artist/3/1.jpg">
-					<img src="img/artist/3/2.jpg">
+					<img src="img/artist/3/1.jpg" class="mobile-width">
+					<img src="img/artist/3/2.jpg" class="mobile-width">
 				</div>
 			</div>
 			
@@ -155,8 +155,8 @@
 				</div>
 
 				<div class="a-work">
-					<img src="img/artist/4/1.jpg">
-					<img src="img/artist/4/2.jpg">
+					<img src="img/artist/4/1.jpg" class="mobile-width">
+					<img src="img/artist/4/2.jpg" class="mobile-width">
 				</div>
 			</div>
 			
@@ -183,9 +183,9 @@
 				</div>
 
 				<div class="a-work">
-					<img src="img/artist/5/1.jpg">
-					<img src="img/artist/5/2.jpg">
-					<img src="img/artist/5/3.jpg">
+					<img src="img/artist/5/1.jpg" class="mobile-width">
+					<img src="img/artist/5/2.jpg" class="mobile-width">
+					<img src="img/artist/5/3.jpg" class="mobile-width">
 				</div>
 			</div>
 			
@@ -212,9 +212,9 @@
 				</div>
 
 				<div class="a-work">
-					<img src="img/artist/6/1.jpg">
-					<img src="img/artist/6/2.jpg">
-					<img src="img/artist/6/3.jpg">
+					<img src="img/artist/6/1.jpg" class="mobile-width">
+					<img src="img/artist/6/2.jpg" class="mobile-width">
+					<img src="img/artist/6/3.jpg" class="mobile-width">
 				</div>
 			</div>
 			
@@ -241,9 +241,9 @@
 				</div>
 
 				<div class="a-work">
-					<img src="img/artist/7/1.jpg">
-					<img src="img/artist/7/2.jpg">
-					<img src="img/artist/7/3.jpg">
+					<img src="img/artist/7/1.jpg" class="mobile-width">
+					<img src="img/artist/7/2.jpg" class="mobile-width">
+					<img src="img/artist/7/3.jpg" class="mobile-width">
 				</div>
 			</div>
 			
@@ -270,8 +270,8 @@
 				</div>
 
 				<div class="a-work">
-					<img src="img/artist/8/1.jpg">
-					<img src="img/artist/8/2.jpg">
+					<img src="img/artist/8/1.jpg" class="mobile-width">
+					<img src="img/artist/8/2.jpg" class="mobile-width">
 				</div>
 			</div>
 			
