--- a/history.html
+++ b/history.html
@@ -121,7 +121,7 @@
 				</div>
 			</div>
 			<div class="h-section-2" id="sec_6">				
-				<div class="h-innerContent">
+				<div class="h-innerContent full">
 					<p class="darkGreen baiJamjuree" id="h_innerContent">
 						<strong>นอกจากนี้ยังทรงแปลและเรียบเรียงบทความ อีกหลายเรื่องด้วยกัน</strong><br>
 						๑. ข่าวจากวิทยุเพื่อสันติภาพและความก้าวหน้า จาก Radio Peace and Progress ในนิตยสาร Intelligence Degest ฉบับลงวันที่ ๑ เมษายน ค.ศ. ๑๙๗๕ (พ.ศ. ๒๕๑๘)
