--- a/history.html
+++ b/history.html
@@ -28,25 +28,49 @@
 			</a>
 		</div>
 		<h1 class="darkGreen Winter" id="h-history">HISTORY</h1>
+		<!-- menu -->
 		<ul class="innerMenu darkGreen Srinakharinwirot" id="inner_menu">
-			<li id="h_menu1" class="lightOrange clickMenu">ผลงานการประพันธ์ของพระบาทสมเด็จพระปรมินทรมหาภูมิพลอดุลยเดช</li><br>
-			<li id="h_menu2">ประวัติความเป็นมาของพระราชนิพนธ์พระมหาชนก</li>
+			<li id="m1" class="setDisplay"><a href="story.html">STORY</a></li>
+			<li class="dropdown-submenu" id="m2">
+				<a href="#" id="head_m2" class="setDisplay">HISTORY</a>
+				<ul class="dropdown-menu innerMenu">
+					<li id="h_menu1" class="lightOrange clickMenu" style="display: none;">ผลงานการประพันธ์ของพระบาทสมเด็จพระปรมินทรมหาภูมิพลอดุลยเดช</li><br>
+					<li id="h_menu2" style="display: none;">ประวัติความเป็นมาของพระราชนิพนธ์พระมหาชนก</li>
+				</ul>
+			</li>
+			<li class="dropdown-submenu setDisplay" id="m3" >
+				<a href="#" id="head_m3">MEDIA</a>
+				<li id="m_menu1" class="lightOrange clickMenu setDisplay" style="display: none;">พระมหาชนกฉบับตีพิมพ์</li>
+				<li id="m_menu2" class="setDisplay" style="display: none;">หนังสือการ์ตูนพระมหาชนก</li>
+				<li id="m_menu3" class="setDisplay" style="display: none;">แอนิเมชั่นพระมหาชนก</li>
+			</li>
+			<li class="dropdown-submenu setDisplay" id="m4">
+				<a href="#" id="head_m4">ARTIST</a>
+				<li id="a_menu1" class="lightOrange clickMenu setDisplay" style="display: none;">เฉลิมชัย โฆษิตพิพัฒน์</li>
+				<li id="a_menu2" class="setDisplay" style="display: none;">ประหยัด พงษ์ดำ</li>
+				<li id="a_menu3" class="setDisplay" style="display: none;">ปรีชา เถาทอง</li>
+				<li id="a_menu4" class="setDisplay" style="display: none;">พิชัย นิรันต์</li>
+				<li id="a_menu5" class="setDisplay" style="display: none;">เนติกร ชินโย</li>
+				<li id="a_menu6" class="setDisplay" style="display: none;">จินตนา เปี่ยมศิริ</li>
+				<li id="a_menu7" class="setDisplay" style="display: none;">ปัญญา วิจินธนสาร</li>
+				<li id="a_menu8" class="setDisplay" style="display: none;">ธีระวัฒน์ คะนะมะ</li>
+			</li>
 		</ul>
 		<div id="backHome">
 			<a href="index.html"><i class="fa fa-chevron-circle-left lightGreen" style="font-size:48px"></i></a>
-			
+
 		</div>			
-		
+
 	</div>
-	
+
 	<div class="h-content" id="h_content">
 		<p class="lightOrange Srinakharinwirot header" id="h_innerHead" style="letter-spacing: 2px;">ผลงานการประพันธ์ของพระบาทสมเด็จพระปรมินทรมหาภูมิพลอดุลยเดช</p>
 		<div class="h-section-1" id="sec_1">
 			<div class="img-left">
 				<img src="img/history/1.jpg" class="h_imgContent" id="h_img">
 			</div>
-			
-			
+
+
 			<div class="h-innerContent">
 				<p class="darkGreen baiJamjuree" id="h_innerContent_sec1">
 					“นักเขียน นักประพันธ์ งานสำคัญก็คือ แสดงความคิดของตอนออกมาเป็นเรื่องชีวิต หรือเรื่องแต่งขึ้นมา เพื่อให้ผู้อื่นได้ประโยชน์ คือความรู้บ้าง บันเทิงบ้าง นักแสดงความคิดสำคัญมาก เพราะว่ามีอิทธิพลต่อชีวิตของมวลมนุษย์ อาจทำให้เกิดความคล้อยตามไปและตัวท่านเขียนดีก็ยิ่งคล้อยตามกันมาก ฉะนั้น นักประพันธ์ต้องมีความรับผิดชอบสูง เพราะท่านเป็นผู้ปั้นความคิดและความบริสุทธิ์ในความคิด จึงเป็นเรื่องที่สำคัญ ดังบทความกลั่นกรองไว้ในสมองว่า สิ่งที่จะเขียนออกมาจะไม่แสลง ไม่ทำลายความคิดของประชากร ไม่ทำลายผู้อื่น และตนเอง คือมีเสรีภาพในการเขียนอย่างเต็มที่ในขอบเขตของศีลธรรม”<br><br>
@@ -68,13 +92,13 @@
 			<div class="img-right">
 				<img src="img/history/2.jpg" class="h_imgContent">
 			</div>
-			
+
 		</div>
 		<div class="h-section-1" id="sec_3">
 			<div class="img-left">
 				<img src="img/history/3.jpg" class="h_imgContent">
 			</div>
-			
+
 			<div class="h-innerContent">
 				<p class="darkGreen baiJamjuree" id="h_innerContent">
 					<strong>“นายอินทร์ผู้ปิดทองหลังพระ”</strong><br>
@@ -100,13 +124,13 @@
 			<div class="img-right">
 				<img src="img/history/4.jpg" class="h_imgContent">
 			</div>
-			
+
 		</div>
 		<div class="h-section-1" id="sec_5">
 			<div class="img-left">
 				<img src="img/history/5.jpg" class="h_imgContent">
 			</div>
-			
+
 			<div class="h-innerContent">
 				<p class="darkGreen baiJamjuree" id="h_innerContent">
 					<strong>“พระราชดำรัส”</strong><br>
@@ -131,8 +155,8 @@
 				</p>
 			</div>
 		</div>
-		
-		
+
+
 	</div>
 
 	<script type="text/javascript">
@@ -185,6 +209,59 @@
 
 		function navbar(){
 			inner_menu.classList.toggle("show-menu");
+			m1.classList.remove("setDisplay");
+			head_m2.classList.remove("setDisplay");
+			m3.classList.remove("setDisplay");
+			m4.classList.remove("setDisplay");
+			h_menu1.classList.add("setDisplay");
+			h_menu2.classList.add("setDisplay");
+		}
+
+		head_m2.addEventListener("click", h_dropdown);
+		function h_dropdown(){
+			if (h_menu1.style.display == "none") {
+				h_menu1.style.display = "block";
+				h_menu2.style.display = "block";
+			} else {
+				h_menu1.style.display = "none";
+				h_menu2.style.display = "none";
+			}
+		}
+
+		head_m3.addEventListener("click", m_dropdown);
+		function m_dropdown(){
+			if (m_menu1.style.display == "none") {
+				m_menu1.style.display = "block";
+				m_menu2.style.display = "block";
+				m_menu3.style.display = "block";
+			} else {
+				m_menu1.style.display = "none";
+				m_menu2.style.display = "none";
+				m_menu3.style.display = "none";
+			}
+		}
+
+		head_m4.addEventListener("click", a_dropdown);
+		function a_dropdown(){
+			if (a_menu1.style.display == "none") {
+				a_menu1.style.display = "block";
+				a_menu2.style.display = "block";
+				a_menu3.style.display = "block";
+				a_menu4.style.display = "block";
+				a_menu5.style.display = "block";
+				a_menu6.style.display = "block";
+				a_menu7.style.display = "block";
+				a_menu8.style.display = "block";
+			} else {
+				a_menu1.style.display = "none";
+				a_menu2.style.display = "none";
+				a_menu3.style.display = "none";
+				a_menu4.style.display = "none";
+				a_menu5.style.display = "none";
+				a_menu6.style.display = "none";
+				a_menu7.style.display = "none";
+				a_menu8.style.display = "none";
+			}
 		}
 
 		function toHomepage(){
